add detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,4 @@
 <resources>
-    <string name="app_name">Muvi</string>
-    <string name="now_playing">Now Playing</string>
-    <string name="popular">Popular</string>
-    <string name="upcoming">Upcoming</string>
-    <string name="home">Home</string>
-    <string name="bookmark">Bookmark</string>
-    <string name="bookmarked">Bookmarked</string>
-    <string name="film_poster">film_poster</string>
+    <string name="app_name">Movie Catalogue</string>
+    <string name="search_film">Cari Film Apa?</string>
 </resources>
